--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+    tools:context=".MainActivity"
+    >
 
     <TextView
         android:layout_width="match_parent"
@@ -15,6 +17,7 @@
         android:textSize="30sp"
         android:gravity="center"
         android:layout_gravity="center" />
+
 
 </LinearLayout>
 
