copy button added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,13 @@
         android:gravity="center"
         android:layout_gravity="center" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/copy"
+        android:id="@+id/btnCopyText"
+        />
+
 
 </LinearLayout>
 
